--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-SpeechRecognition==3.10.0
-pyttsx3==2.90
-pyaudio==0.2.11
-psutil==5.9.0
-pyautogui==0.9.54
+customtkinter>=5.2.0
+Pillow>=10.0.0
+psutil>=5.9.0
+pyttsx3>=2.90
+SpeechRecognition>=3.10.0
+pyautogui>=0.9.54
